hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_unqualified_struct_same_namespace.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "a",
            IdentId(2) => "S",
            IdentId(3) => "f",
            IdentId(4) => "s",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "boolean",
            IdentId(8) => "div",
            IdentId(9) => "eq",
            IdentId(10) => "ge",
            IdentId(11) => "gt",
            IdentId(12) => "le",
            IdentId(13) => "lt",
            IdentId(14) => "mul",
            IdentId(15) => "neg",
            IdentId(16) => "neq",
            IdentId(17) => "number",
            IdentId(18) => "sub",
            IdentId(19) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 4:22; [68, 69],
                    symbol_id: SymbolId(3),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(5),
                    ],
                ),
                span: 4:25; [71, 86],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(2),
                        span: 3:20; [42, 43],
                        symbol_id: SymbolId(3),
                    },
                    [],
                    Provided(
                        [],
                    ),
                    None,
                ),
                span: 3:13; [35, 46],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: LetFn(
                    Identifier {
                        id: IdentId(3),
                        span: 4:17; [63, 64],
                        symbol_id: SymbolId(21),
                    },
                    [],
                    [
                        Parameter {
                            identifier: Identifier {
                                id: IdentId(4),
                                span: 4:19; [65, 66],
                                symbol_id: SymbolId(22),
                            },
                            type_def_id: TypeDefId(0),
                            span: 4:19; [65, 69],
                            type_id: TypeId(6),
                        },
                    ],
                    Return {
                        type_def_id: None,
                        typed_id: TypeId(1),
                    },
                    Provided(
                        ExprId(0),
                    ),
                    None,
                ),
                span: 4:13; [59, 86],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Namespace(
                    Identifier {
                        id: IdentId(1),
                        span: 2:19; [19, 20],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(2),
                    ],
                ),
                span: 6:9; [95, 96],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(5),
                        span: 8:11; [116, 120],
                        symbol_id: SymbolId(4),
                    },
                    InputId(0),
                    [],
                ),
                span: 8:17; [122, 123],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Ret(
                    None,
                    Implicit,
                ),
                span: 4:25; [71, 86],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 4:22; [68, 69],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(2),
                        ],
                        IdentId(5): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(1),
                    {
                        IdentId(2): [
                            SymbolId(3),
                        ],
                        IdentId(3): [
                            SymbolId(21),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(2),
                    StmtId(1),
                ),
                type_id: TypeId(6),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Namespace(
                    IdentId(5),
                    {
                        IdentId(6): [
                            SymbolId(20),
                        ],
                        IdentId(7): [
                            SymbolId(7),
                        ],
                        IdentId(8): [
                            SymbolId(19),
                        ],
                        IdentId(9): [
                            SymbolId(17),
                            SymbolId(18),
                        ],
                        IdentId(10): [
                            SymbolId(16),
                        ],
                        IdentId(11): [
                            SymbolId(15),
                        ],
                        IdentId(12): [
                            SymbolId(14),
                        ],
                        IdentId(13): [
                            SymbolId(13),
                        ],
                        IdentId(14): [
                            SymbolId(12),
                        ],
                        IdentId(15): [
                            SymbolId(11),
                        ],
                        IdentId(16): [
                            SymbolId(9),
                            SymbolId(10),
                        ],
                        IdentId(17): [
                            SymbolId(6),
                        ],
                        IdentId(18): [
                            SymbolId(8),
                        ],
                        IdentId(19): [
                            SymbolId(5),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(19),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(17),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(7),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: LetFn(
                    IdentId(3),
                    StmtId(2),
                    [
                        TypeId(6),
                    ],
                    TypeId(1),
                ),
                type_id: TypeId(11),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Parameter(
                    IdentId(4),
                    StmtId(2),
                    0,
                ),
                type_id: TypeId(6),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Struct(
                StmtId(1),
                [],
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(11) => Function(
                [
                    TypeId(6),
                ],
                TypeId(1),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(0): [
                    Implicit(
                        None,
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
