hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_access_not_array.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected type array, got number",
                span: 1:22; [21, 22],
                level: Error,
            },
        ],
        inputs: (),
    },
)
